# the-spirits-book-backend

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  estrutura.json  main.py  perguntas.js  pyproject.toml
app/: auth.py  main.py  settings.py
app/database/: client.py
app/database/seed/: seeder_script.py
app/database/seed_questions/: seed_questions.py
app/database/seed_questions/batches/: __init__.py  questions_batch_01.py  questions_batch_02.py
app/questions/: models.py  router.py  service.py  utils.py
